fix: changed the warning color for better visibility

--- a/components/css/bleedblue.css
+++ b/components/css/bleedblue.css
@@ -19,7 +19,7 @@
     --bb-success-light-color: #84f1c9;
     --bb-danger-color: #aa0e0e;
     --bb-danger-light-color: #ff5757;
-    --bb-warning-color: rgb(206, 206, 10);
+    --bb-warning-color: rgb(187, 187, 16);
     --bb-warning-light-color: rgb(243, 243, 136);
     --bb-secondary-color: #2c7ae0;
     --bb-dark-color: #393734;
